<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="unknown">未知</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="year">岁</string>
    <string name="km">km</string>
    <string name="m">m</string>
    <string name="coin">金币</string>
    <string name="yuan">元</string>
    <string name="update_title">发现新版本</string>
    <string name="hint_number">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="signin">注册</string>
    <string name="login">登录</string>
    <string name="join_jianyue">加入春花聊天</string>
    <string name="forget_password">忘记密码？</string>
    <string name="str_phone_login">登录</string>
    <string name="str_phone_register">注册新账号</string>
    <string name="str_lgin_tips">点击登录即代表同意</string>
    <string name="phone_number_hint">请输入您的手机号码</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="hint_input_request_code">请输入您的邀请码</string>
    <string name="hint_upload_head">请上传本人头像</string>
    <string name="get_request_code">申请邀请码</string>
    <string name="next_step">下一步</string>
    <string name="hint_set_password">设置密码, 6-20位数字加字母</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="privacy_notification_1">注册即代表您已经同意</string>
    <string name="privacy_notification_2">使用条款和隐私政策</string>
    <string name="sex">性别</string>
    <string name="sex_notification">性别选择确定后不可更改</string>
    <string name="name">昵称</string>
    <string name="birthday">生日</string>
    <string name="city">城市</string>
    <string name="real_name">姓名</string>
    <string name="hint_real_name">非昵称，仅为申请邀请码用途</string>
    <string name="phone_number">手机号</string>
    <string name="hint_phone_number">邀请码将以短消息发送</string>
    <string name="job">职业</string>
    <string name="year_income">年收入</string>
    <string name="income_1">50万以下</string>
    <string name="income_2">50万-100万</string>
    <string name="income_3">100万-1000万</string>
    <string name="income_4">1000万-1亿</string>
    <string name="income_5">1亿-以上</string>
    <string name="selfie_hd">高清自拍</string>
    <string name="selfie_hd_annotation">（颜值是最快的通行证）</string>
    <string name="driving_license">机动车行驶证</string>
    <string name="driving_license_annotation">（豪车是最有效的加分项、可选，仅为审核用）</string>
    <string name="submit_request">提交申请</string>
    <string name="ensure">确定</string>
    <string name="mars">火星</string>
    <string name="Withdraw">提现</string>
    <string name="app_name">春花聊天-私密视频交友</string>
    <string name="app_original_name">春花聊天</string>
    <string name="title">春花聊天</string>
    <string name="popular">热门</string>
    <string name="newest">最新</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="discover">推荐</string>
    <string name="chats">消息</string>
    <string name="me">我的</string>
    <string name="list">排行榜</string>
    <string name="meet_up">\n偶遇</string>
    <string name="sex_colon">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="choose_age">年龄段选择：</string>
    <string name="age_below_18">18岁以下</string>
    <string name="age_18_to_23">18-23岁</string>
    <string name="age_23_to_30">23-30岁</string>
    <string name="age_above_30">30岁以上</string>
    <string name="last_login_time">上次登录时间</string>
    <string name="distance">与我相距</string>
    <string name="time_below_15min">15分钟以内</string>
    <string name="time_below_1hour">1小时以内</string>
    <string name="time_below_1day">1天以内</string>
    <string name="distance_below_1km">1km以内</string>
    <string name="distance_below_3km">3km以内</string>
    <string name="distance_below_5km">5km以内</string>
    <string name="all_option">全部</string>
    <string name="invite_me">对我表白</string>
    <string name="invite_undo">未处理</string>
    <string name="invite_accept">已接受</string>
    <string name="invite_reject">已拒绝</string>
    <string name="invite_cancel">已撤回</string>
    <string name="my_invite">我的表白</string>
    <string name="enter_chat">进入聊天</string>
    <string name="confirm_delete_title">对话删除确认</string>
    <string name="confirm_delete_content">确认删除这条对话吗？\n注：删除后无法恢复</string>
    <string name="edit_profile">编辑资料</string>
    <string name="profile">个人资料</string>
    <string name="my_album">我的相册</string>
    <string name="my_balance">我的金库</string>
    <string name="delete">删除</string>
    <string name="sesame_credit">芝麻信用</string>
    <string name="wallet">我的钱包</string>
    <string name="show">相册</string>
    <string name="friend">关注</string>
    <string name="friend_list">好友列表</string>
    <string name="charge_standard">通话设置</string>
    <string name="is_member">会员</string>
    <string name="is_gift">礼物</string>
    <string name="is_family">家族</string>
    <string name="is_share">邀请</string>
    <string name="share_reward">邀请奖励</string>
    <string name="security">账户安全</string>
    <string name="is_member_power">会员特权</string>
    <string name="setting">设置</string>
    <string name="setting_personal">个人资料</string>
    <string name="setting_friend">交友资料</string>
    <string name="video_verify">视频认证</string>
    <string name="balance">余额</string>
    <string name="charge">充值</string>
    <string name="withdraw">提现</string>
    <string name="bill">账单</string>
    <string name="is_sesame">您已完成芝麻信用认证</string>
    <string name="is_video">您已完成视频认证</string>
    <string name="sesame_verify">芝麻信用认证</string>
    <string name="click_to_verify">点击认证</string>
    <string name="red_spot">● REC</string>
    <string name="verify_notify">提示：不支持上传本地视频，本视频不对外使用，只做认证使用。</string>
    <string name="sesame_notify">绑定芝麻信用，让你更有魅力，也会获得更多权限。</string>
    <string name="id_number">身份证号</string>
    <string name="click_to_binding">一键绑定</string>
    <string name="account_security">修改密码</string>
    <string name="invisible_mode">一键隐身</string>
    <string name="answer_switch">接听开关</string>
    <string name="video_switch">视频接听</string>
    <string name="audio_switch">语音接听</string>
    <string name="about_us">关于我们</string>
    <string name="jianyue_member">春花聊天会员</string>
    <string name="version_update">版本更新</string>
    <string name="current_version">当前版本：</string>
    <string name="clear_cache">清除缓存</string>
    <string name="feedback">反馈意见</string>
    <string name="log_out">退出当前账号</string>
    <string name="log_out_title">提示</string>
    <string name="log_out_message">确定要注销登录吗？注销后您需要重新登录</string>
    <string name="abandon_answer">禁止接听</string>
    <string name="personal_sign">个人签名：</string>
    <string name="user_id_str">ID：%s</string>
    <string name="verification">认证：</string>
    <string name="video">视频价格：</string>
    <string name="audio">语音价格：</string>
    <string name="connection_rate">接通率：</string>
    <string name="gold_per_min">金币/分钟</string>
    <string name="height_colon">身高(cm)：</string>
    <string name="job_colon">职业：</string>
    <string name="weight">体重(kg)：</string>
    <string name="measurements">三围：</string>
    <string name="liked_date_way">喜欢的约会方式：</string>
    <string name="advantage_field">我擅长的领域：</string>
    <string name="interests">喜欢聊的话题：</string>
    <string name="liked_opposite_sex">对异性要求：</string>
    <string name="unlock">一键解锁</string>
    <string name="unlock_title">解锁提示</string>
    <string name="unlock_message">发个红包可以解锁更多姿势，可以约ta聊天以及约会哦</string>
    <string name="video_chat">视频聊天</string>
    <string name="voice_chat">语音聊天</string>
    <string name="private_chat">私信</string>
    <string name="report">举报</string>
    <string name="block">拉黑</string>
    <string name="Invitation_code">我的邀请码:</string>
    <string name="sign_Invitation_code">邀请码</string>
    <string name="free">免费</string>
    <string name="start_invite_title">表白</string>
    <string name="hint_invite">红包代表我的心,希望能认识你~</string>
    <string name="start_invite">红包表白</string>
    <string name="swipe_to_more">下滑更多</string>
    <string name="gift">礼物</string>
    <string name="send_gift">赠送礼物</string>
    <string name="account_remain_money">当前账号余额：</string>
    <string name="go_charge">去充值</string>
    <string name="invite_request">详情</string>
    <string name="accept">接受</string>
    <string name="refuse">拒绝</string>
    <string name="withdraw_invite">撤回邀约</string>
    <string name="status_undo">未处理</string>
    <string name="status_doing">确认中</string>
    <string name="status_accept">已接受</string>
    <string name="status_reject">已拒绝</string>
    <string name="status_cancel">已撤回</string>
    <string name="hint_sign">有什么想对朋友说 有什么想对朋友说 有什么想对朋友说</string>
    <string name="change_head_pic">更换头像</string>
    <string name="finish_degree">完成度:</string>
    <string name="nick_name">昵称</string>
    <string name="birthday_colon">生日</string>
    <string name="city_colon">城市</string>
    <string name="hobby">爱好</string>
    <string name="hint_space_spilt">多项请用空格隔开</string>
    <string name="signature">个性签名</string>
    <string name="save">保存</string>
    <string name="nickname">昵称：%s</string>
    <string name="id">ID：%s</string>
    <string name="menu_black">拉黑</string>
    <string name="menu_cancel_black">取消拉黑</string>
    <string name="menu_tip_off">举报</string>
    <string name="menu_follow">关注</string>
    <string name="menu_cancel_follow">取消关注</string>
    <string name="amount_sum">账户余额：</string>
    <string name="choose_amount">选择充值金额</string>
    <string name="rmb_charge">我要充值</string>
    <string name="amount_60">600金币</string>
    <string name="rmb_6">¥6.00</string>
    <string name="amount_500">5000金币</string>
    <string name="rmb_50">¥50.00</string>
    <string name="amount_980">9800金币</string>
    <string name="rmb_98">¥98.00</string>
    <string name="amount_1980">19800金币</string>
    <string name="rmb_198">¥198.00</string>
    <string name="amount_5880">58800金币</string>
    <string name="rmb_588">¥588.00</string>
    <string name="amount_9980">99800金币</string>
    <string name="rmb_998">¥998.00</string>
    <string name="amount_19980">199800金币</string>
    <string name="rmb_1998">¥1998.00</string>
    <string name="amount_49980">499800金币</string>
    <string name="rmb_4998">¥4998.00</string>
    <string name="wechat_charge">微信支付</string>
    <string name="alipay_charge">支付宝支付</string>
    <string name="bank_card">银行卡</string>
    <string name="alipay">支付宝</string>
    <string name="withdraw_amount">提现金额：</string>
    <string name="withdraw_name">开卡姓名：</string>
    <string name="withdraw_bank_number">银行卡号：</string>
    <string name="withdraw_alipay_number">支付宝账号：</string>
    <string name="withdraw_payee_name">收款人姓名：</string>
    <string name="withdraw_bank">开户银行：</string>
    <string name="withdraw_province">开户省市：</string>
    <string name="withdraw_point">开户支行：</string>
    <string name="withdraw_password">登录密码：</string>
    <string name="withdraw_amount_hint">最多可提取现金</string>
    <string name="withdraw_password_hint">春花聊天登录密码</string>
    <string name="tax_notify">本次提现不扣除手续费\n充值账户不能提现，仅热门用户可提现</string>
    <string name="tax_30_percent">视频及语音赚取的金币将会扣除30%的平台使用费</string>
    <string name="list_time">本周排行</string>
    <string name="my_ranking">我的排名:</string>
    <string name="my_money_num">我的土豪值:</string>
    <string name="my_glamour_num">我的魅力值:</string>
    <string name="ranking_name">昵称</string>
    <string name="ranking_age">年龄</string>
    <string name="ranking_num">100</string>
    <string name="ranking_default">--</string>
    <string name="classify_lovesinging">我爱唱歌</string>
    <string name="classify_seeklove">情感空间</string>
    <string name="classify_singer">悦耳声优</string>
    <string name="classify_truth">真心话</string>
    <string name="take_photo">拍照</string>
    <string name="choose_photo">从相册选择照片</string>
    <string name="choose_video">从相册选择视频</string>
    <string name="avatar_update">设为封面</string>
    <string name="delete_photo">删除</string>
    <string name="look_photo">查看</string>
</resources>