<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        <Button
            android:id="@+id/lookBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_button"
            android:padding="10dp"
            android:text="@string/look_photo"
            android:textColor="@color/myWhite"
            android:textSize="16sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/takePhotoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_button"
            android:padding="10dp"
            android:text="@string/take_photo"
            android:textColor="@color/myWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pickPhotoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_button"
            android:padding="10dp"
            android:text="@string/choose_photo"
            android:textColor="@color/myWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pickVideoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_button"
            android:padding="10dp"
            android:text="@string/choose_video"
            android:textColor="@color/myWhite"
            android:textSize="16sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/avatar_update_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_button"
            android:padding="10dp"
            android:text="@string/avatar_update"
            android:textColor="@color/myWhite"
            android:textSize="16sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_button"
            android:padding="10dp"
            android:text="@string/delete_photo"
            android:textColor="@color/myWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_button_white"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="#373447"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>