<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_size_2"
    android:background="@null"
    android:gravity="center_horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_size_4"
        android:textSize="@dimen/font_size_10"
        android:textColor="@color/myBlack"
        android:text="@string/confirm_delete_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_size_2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_chat_list_dialog"
            android:layout_width="45dp"
            android:layout_height="15dp"
            android:layout_marginRight="@dimen/margin_size_4"
            android:background="@drawable/shape_button"
            android:textColor="@color/myWhite"
            android:textSize="@dimen/font_size_10"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btn_confirm_chat_list_dialog"
            android:layout_width="45dp"
            android:layout_height="15dp"
            android:layout_marginLeft="@dimen/margin_size_4"
            android:background="@drawable/shape_button"
            android:textColor="@color/myWhite"
            android:textSize="@dimen/font_size_10"
            android:text="@string/confirm"/>
    </LinearLayout>
</LinearLayout>